fix: address review comments for button label alignment and changelog separator

--- a/src/index.css
+++ b/src/index.css
@@ -76,6 +76,7 @@ a {
 
 .scrum-actions>button span,
 .scrum-actions>.tooltip-container>button span {
+    display: block;
     text-align: center;
     white-space: normal;
 }
